--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -6,8 +6,13 @@
     "react-scripts": "^1.1.0"
   },
   "dependencies": {
+    "lodash": "^4.17.5",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-input-range": "^1.3.0",
+    "react-router-dom": "^4.2.2",
+    "semantic-ui-css": "^2.3.0",
+    "semantic-ui-react": "^0.78.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,5 +20,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:8080"
 }
